movie poster page, footer links

--- a/work.html
+++ b/work.html
@@ -146,7 +146,7 @@
     <section id="scrollable-div" class="w-full overflow-x-auto whitespace-nowrap scrollbar-hide no-scrollbar pb-4 pt-4"
         data-scroll-section>
         <div class="flex flex-nowrap gap-4">
-            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group" href="/advertising.html">
                 <img src="/our_works/Advertising.webp" class="w-full h-full object-cover " />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -154,7 +154,7 @@
                 </div>
             </a>
 
-            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group" href="/branding.html">
                 <img src="/our_works/Branding.webp" class="w-full h-full object-cover filter blur-sm" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity hidden">
@@ -162,7 +162,7 @@
                 </div>
             </a>
 
-            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group" href="/events.html">
                 <img src="/our_works/Events.webp" class="w-full h-full object-cover filter blur-sm" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -178,7 +178,7 @@
                 </div>
             </a>
 
-            <a class="relative w-full sm:w-[50vw]  h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw]  h-screen flex-shrink-0 inline-block group" href="/products.html">
                 <img src="/our_works/Products.webp" class="w-full h-full object-cover filter blur-sm" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -186,7 +186,7 @@
                 </div>
             </a>
 
-            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group" href="/title-animations.html">
                 <img src="/our_works/TItleAnimations.webp" class="w-full h-full object-cover filter blur-sm" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
