freeze ccontact card desktop size

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                         <div class="w-full order-1 md:order-none">
                             <h3 class="font-semibold">HOME</h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/aboutus.html'">Why us</li>
+                                <li class="cursor-pointer hover:text-yellow-400" onclick="window.location.href='/aboutus.html'">Why us</li>
                             </ul>
                         </div>
                         <div class="w-full">
