--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
     <section id="tilt-section"
         class="w-full min-h-screen flex items-center justify-center bg-white py-10 sm:py-16 px-4 sm:px-6">
         <div
-            class="post-card mx-auto  border shadow-2xl bg-white relative flex flex-col md:flex-row overflow-hidden w-[70vw] md:w-[50vw] aspect-[3/2] h-[75dvh] md:h-[60dvh]">
+            class="post-card mx-auto  border shadow-2xl bg-white relative flex flex-col md:flex-row overflow-hidden w-[70vw] md:w-[45vw] aspect-[2/3] h-[75dvh] md:h-[55dvh]">
             <!-- Left Side (Reduced Image Size) -->
             <div class="w-full md:w-1/2 flex items-center justify-center px-4 md:px-6 pt-6 pb-4 md:py-20 xl:py-28 border-b-2 md:border-b-0 md:border-r-0 border-dotted border-gray-400"
                 style="border-image: repeating-linear-gradient(to right, #000 0, #000 1px, transparent 1px, transparent 7px) 100% 1;">
@@ -114,7 +114,7 @@
 
             <!-- Vertical Dotted Line (Hidden on Small Screens) -->
             <div
-                class="hidden md:block absolute left-1/2 top-24 bottom-24 border-l-2 border-[#272cf7] border-dotted vertical-line">
+                class="hidden md:block absolute left-1/2 top-[3rem] bottom-[3rem] border-l-2 border-[#272cf7] border-dotted vertical-line">
             </div>
 
             <!-- Right Side (Form Section) -->
