--- a/index.html
+++ b/index.html
@@ -707,8 +707,8 @@
                         <div class="w-full order-1 md:order-none">
                             <h3 class="font-semibold">HOME</h3>
                             <ul class="space-y-1">
-                                <li class="hover:font-semibold">
-                                    <a href="/aboutus.html">Why us</a>
+                                <li>
+                                    <a class="hover:text-yellow-400" href="/aboutus.html">Why us</a>
                                 </li>
                             </ul>
                         </div>
