contact page correction

--- a/contactus.html
+++ b/contactus.html
@@ -70,13 +70,14 @@
                 /* Added missing semicolon */
             }
 
-            @media (max-width: 375px) {
+            @media (max-width: 375px) and (max-height: 667px) {
 
-                /* Styles for iPhone SE and similar small screens */
-                .post-card {
+                /* Styles only for iPhone SE and similar screen sizes */
+                 .post-card {
                     height: 90vh;
                 }
             }
+ 
 
         }
 
