--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                             <img src="/MIW_Website_Assets/doubleqoute_High_Blue_testimonials.png"
                                 class="absolute top-12 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block blue-quote"
                                 alt="Quote Top">
-                           <div
+                            <div
                                 class="container mx-auto px-4 h-full flex flex-col  pt-8 sm:pt-0
                          md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4  mt-8 sm:mt-0">
@@ -571,7 +571,7 @@
                             <img src="/MIW_Website_Assets/doubleqoute_High_Blue_testimonials.png"
                                 class="absolute top-12 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block blue-quote"
                                 alt="Quote Top">
-                               <div
+                            <div
                                 class="container mx-auto px-4 h-full flex flex-col  pt-8 sm:pt-0
                          md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4  mt-8 sm:mt-0">
@@ -705,7 +705,9 @@
                     <div
                         class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-5 gap-x-6 gap-y-6 w-full text-left md:text-left">
                         <div class="w-full order-1 md:order-none">
-                            <h3 class="font-semibold">HOME</h3>
+                            <h3 class="font-semibold">
+                                <a class="hover:text-yellow-400" href="/">HOME</a>
+                            </h3>
                             <ul class="space-y-1">
                                 <li>
                                     <a class="hover:text-yellow-400" href="/aboutus.html">Why us</a>
@@ -713,21 +715,36 @@
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">WORK</h3>
+                            <h3 class="font-semibold">
+                                <a class="hover:text-yellow-400" href="/work.html">WORK</a>
+                            </h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/movie-poster.html'">Film
-                                    Posters</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/events.html'">Events</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/title-animations.html'">Title
-                                    Animations</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/branding.html'">Branding</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/products.html'">Products</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/advertising.html'">
-                                    Advertising</li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/movie-poster.html">Film Posters</a>
+                                </li>
+                                 <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/events.html">Events</a>
+                                </li>
+                                 <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/title-animations.html">Title Animations</a>
+                                </li> 
+                                
+                                 <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/branding.html">Branding</a>
+                                </li>
+                                 <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/products.html">Products</a>
+                                </li>
+                                 <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/advertising.html">Advertising</a>
+                                </li>
+  
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">SERVICE</h3>
+                            <h3 class="font-semibold">
+                                <a class="hover:text-yellow-400" href="/service.html">SERVICE</a>
+                            </h3>
                             <ul class="space-y-1">
                                 <li>Branding</li>
                                 <li>Advertising</li>
@@ -738,19 +755,21 @@
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">TEAM</h3>
+                            <h3 class="font-semibold"><a class="hover:text-yellow-400" href="/team.html">TEAM</a></h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/team.html'">Meet the Team
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/team.html">Meet the Team</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">CONTACT</h3>
+                            <h3 class="font-semibold"><a class="hover:text-yellow-400" href="/contactus.html">CONTACT</a></h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/contactus.html'">Contact
-                                    Information</li>
-                                <li>Careers</li>
-                            </ul>
+                                
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/contactus.html">Contact Information</a>
+                                </li>
+                             </ul>
                         </div>
                     </div>
                     <!-- Second Row: Button & Social Media Icons -->
