service popup ui

--- a/index.html
+++ b/index.html
@@ -743,15 +743,20 @@
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">
-                                <a class="hover:text-yellow-400" href="/service.html">SERVICE</a>
+                                <a class="hover:text-yellow-400" href="/service.html">
+                                    SERVICE
+                               
+                                </a>
                             </h3>
                             <ul class="space-y-1">
-                                <li>Branding</li>
-                                <li>Advertising</li>
-                                <li>Film Production</li>
-                                <li>Graphic Design</li>
-                                <li>Social Media Marketing</li>
-                                <li>Integrated Marketing</li>
+                                <li>
+                                    <a class="hover:text-yellow-400" href="/service.html?details=branding-popup">Branding</a>
+                                </li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=ads-popup">Advertising</a></li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=film-production-popup">Film Production</a></li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=designer-popup">Graphic Design</a></li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=ui-ux-popup">Social Media Marketing</a></li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=integrated-popup">Integrated Marketing</a></li>
                             </ul>
                         </div>
                         <div class="w-full">
