standard height for contact

--- a/contactus.html
+++ b/contactus.html
@@ -57,7 +57,7 @@
         @media (max-width: 767px) {
             .post-card {
                 width: 300px;
-                height: 80vh;
+                height: 600px;
             }
 
             .contact-heading {
@@ -69,14 +69,7 @@
                 width: 4rem;
                 /* Added missing semicolon */
             }
-
-            @media (max-width: 375px) and (max-height: 667px) {
-
-                /* Styles only for iPhone SE and similar screen sizes */
-                 .post-card {
-                    height: 90vh;
-                }
-            }
+ 
  
 
         }
