--- a/title-animations.html
+++ b/title-animations.html
@@ -401,47 +401,82 @@
                     <div
                         class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-5 gap-x-6 gap-y-6 w-full text-left md:text-left">
                         <div class="w-full order-1 md:order-none">
-                            <h3 class="font-semibold">HOME</h3>
+                            <h3 class="font-semibold">
+                                <a class="hover:text-yellow-400" href="/">HOME</a>
+                            </h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/aboutus.html'">Why us</li>
+                                <li>
+                                    <a class="hover:text-yellow-400" href="/aboutus.html">Why us</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">WORK</h3>
+                            <h3 class="font-semibold">
+                                <a class="hover:text-yellow-400" href="/work.html">WORK</a>
+                            </h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/movie-poster.html'">Film
-                                    Posters</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/events.html'">Events</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/title-animations.html'">Title
-                                    Animations</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/branding.html'">Branding</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/products.html'">Products</li>
-                                <li class="cursor-pointer" onclick="window.location.href='/advertising.html'">
-                                    Advertising</li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/movie-poster.html">Film Posters</a>
+                                </li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/events.html">Events</a>
+                                </li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/title-animations.html">Title Animations</a>
+                                </li>
+
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/branding.html">Branding</a>
+                                </li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/products.html">Products</a>
+                                </li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/advertising.html">Advertising</a>
+                                </li>
+
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">SERVICE</h3>
+                            <h3 class="font-semibold">
+                                <a class="hover:text-yellow-400" href="/service.html">
+                                    SERVICE
+
+                                </a>
+                            </h3>
                             <ul class="space-y-1">
-                                <li>Branding</li>
-                                <li>Advertising</li>
-                                <li>Film Production</li>
-                                <li>Graphic Design</li>
-                                <li>Social Media Marketing</li>
-                                <li>Integrated Marketing</li>
+                                <li>
+                                    <a class="hover:text-yellow-400"
+                                        href="/service.html?details=branding-popup">Branding</a>
+                                </li>
+                                <li><a class="hover:text-yellow-400"
+                                        href="/service.html?details=ads-popup">Advertising</a></li>
+                                <li><a class="hover:text-yellow-400"
+                                        href="/service.html?details=film-production-popup">Film Production</a></li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=designer-popup">Graphic
+                                        Design</a></li>
+                                <li><a class="hover:text-yellow-400" href="/service.html?details=ui-ux-popup">Social
+                                        Media Marketing</a></li>
+                                <li><a class="hover:text-yellow-400"
+                                        href="/service.html?details=integrated-popup">Integrated Marketing</a></li>
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">TEAM</h3>
+                            <h3 class="font-semibold"><a class="hover:text-yellow-400" href="/team.html">TEAM</a></h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/team.html'">Meet the Team</li>
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/team.html">Meet the Team</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="w-full">
-                            <h3 class="font-semibold">CONTACT</h3>
+                            <h3 class="font-semibold"><a class="hover:text-yellow-400"
+                                    href="/contactus.html">CONTACT</a></h3>
                             <ul class="space-y-1">
-                                <li class="cursor-pointer" onclick="window.location.href='/contactus.html'">Contact Information</li>
-                                <li>Careers</li>
+
+                                <li class="cursor-pointer">
+                                    <a class="hover:text-yellow-400" href="/contactus.html">Contact Information</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
